ref: rename ModelComponent.ModelGroup to ModelGroupData to avoid conflicts